# 234123-os-hw1

./: .gitignore  BuiltInCommands.cpp  BuiltInCommands.h  CMakeLists.txt  CMakePresets.json  CommandUtils.h  Commands.cpp  Commands.h  ExternalCommands.cpp  ExternalCommands.h  JobsList.cpp  JobsList.h  Makefile  README.md  README.txt  SmallShell.cpp  SmallShell.h  signals.cpp  signals.h  smash.cpp  test_expected_output1.txt  test_input1.txt
.github/workflows/: cmake.yml
tests/: BuiltInCommandsTests.cpp  CMakeLists.txt  ExternalCommandsTests.cpp
